--- a/VRChat/56/1229356.html
+++ b/VRChat/56/1229356.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XsSCCbU8J7gIvHMqqW7wNcAXm8rbrn0WdwW6OKkGHss="></script>
+    "iMb7XBOIzNRBNud8Y6kEfL49POPlAX5q73qjhZgLFk8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ひつじさんのぬいぐるみ","description":"ふわふわかわいい、ひつじさんのぬいぐるみです。\nお部屋に置いたり、持ち歩いたりしてお楽しみください♪\n\nこちらのファイルはVRChatでの利用を想定し作成されています。\n\n【内容物】\nUnityパッケージ\nFBXファイル\nテクスチャ１枚\n\nlilToon\nhttps://booth.pm/ja/items/3087170\nをインポートしてからUnitypackageをインポートすると、マテリアルの設定をすることなく使えます。","url":"https://booth.pm/ja/items/1229356","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a4a7842d-1a6a-4d2b-a80c-4c704fe5040b/i/1229356/6c3e9a9c-76c0-4397-addd-b26ee2ef7d7a_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XsSCCbU8J7gIvHMqqW7wNcAXm8rbrn0WdwW6OKkGHss="></script>
+    nonce="iMb7XBOIzNRBNud8Y6kEfL49POPlAX5q73qjhZgLFk8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1229356/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               168
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1229356/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               168
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
