--- a/VRChat/83/1229283.html
+++ b/VRChat/83/1229283.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0NYw9WSxqKOBSXQu4Urf+Hw3eYre3Ju1w+ViHLRkFRY="></script>
+    "QDz07ZX8gxF+kVPFbp4v8N0UKLHyFynt+5F5kig0aMY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"重量級リヴァイアサン","description":"仮設置ページ。\n大きく完成が遅れています。\n後日公開を目指しますので、どうぞよろしくお願いいたします。\n","url":"https://booth.pm/ja/items/1229283","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e983c8b0-3fe2-44b8-8404-4e14af903e59/i/1229283/f052f2d0-1ada-4ba2-8bdc-a7a2aef1b30b_base_resized.jpg"}
     </script>
@@ -84,16 +84,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0NYw9WSxqKOBSXQu4Urf+Hw3eYre3Ju1w+ViHLRkFRY="></script>
+    nonce="QDz07ZX8gxF+kVPFbp4v8N0UKLHyFynt+5F5kig0aMY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -120,6 +117,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -134,7 +133,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -175,7 +175,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1229283/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               215
@@ -190,14 +190,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1229283/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               215
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
