--- a/VRChat/61/1228361.html
+++ b/VRChat/61/1228361.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4NNfATtIa7pUuS8qDjf504tuZd8WoELv8tjFWQtOIXQ="></script>
+    "558SgsmKW5+hntVW2RPKGe4t/0lnj6hyG3iTs72XZ0w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"※サポート終了※オリジナル３Dモデル「ピィニャ」","description":"【ご注意：VRChatアバター設定はVRCSDK2で設定しています】\n\n●『バーチャルマーケット２』出展アバター●\n\n※お知らせ※\n2022/4/22 本アバターはサポート対象外となります。\n長らくご利用頂きありがとうございました！\narktoon shader、VRCSDK2、Dynamicboneの設定ファイルは同梱していますので、購入された方はご自身で修正と設定をお願いします。\nまた、アバターパフォーマンスに関する記述などVRChat内の情報は2022/4/21以前のものです。一部内容が異なる可能性がありますのでご注意ください。\n\n【商品説明】\n\nまほうつかいのケモノっこ『ピィニャ』\n\nVRChatにおける使用を想定して作成したアバターです。\n身長約110cm（耳含めて約130cm）\n大きくゆらゆら揺れるしっぽと大きな耳、萌え袖など自分が考えるたくさんの可愛い要素を詰め込んだアバターです。\n\n自動まばたき設定済み。\nリップシンク設定済み。\nフルボディトラッキング対応。\nDynamicBone設定済。帽子、耳、尻尾、そで、スカートの一部が揺れるようにあらかじめ設定してあります。\nVRChatの椅子着席時の高さ調整等実装済み。\n\nおまけにまほうの杖を同梱。AO用の出現アニメーションも同梱してます。\n\nアバターパフォーマンスランクはMediumとなっています。","url":"https://booth.pm/ja/items/1228361","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/93c14c27-9f45-42bc-be3c-e9954068f328/i/1228361/a10765c3-1db8-41df-a5e3-ab6e3b8c35ef_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4NNfATtIa7pUuS8qDjf504tuZd8WoELv8tjFWQtOIXQ="></script>
+    nonce="558SgsmKW5+hntVW2RPKGe4t/0lnj6hyG3iTs72XZ0w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -174,7 +174,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1228361/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               252
@@ -189,14 +189,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1228361/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               252
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
