--- a/VRChat/48/1228148.html
+++ b/VRChat/48/1228148.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5nVRIO+DmA/77zOuhkcQ8NiwlK3vkY06X8pUzJLfHQE="></script>
+    "BAek+yGLoqARpiEICbSYiyjdoYP2MhkFpQPubCAOcts="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】ロク","description":"オリジナル3Dモデル「ロク」の商品ページです。\n\n-------------------------------------------------------\n[更新履歴]\n2019/02/14 Ver1.0 公開\n2019/06/15 Ver2.0 後頭部の修正\n2019/09/25 Ver2.1 素体の修正、テクスチャの加筆/変更\n2020/02/24 Ver2.2 シェーダー・ライティング結果の調整\n2020/06/23 Ver2.3 利用規約の更新\n　　　　　　　　　VRChat利用者向けにUnity2018に最適化","url":"https://booth.pm/ja/items/1228148","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/664c5515-1e5d-4d1a-905f-280f8494b51d/i/1228148/da62929e-7b0e-41bd-8416-f577f63275a1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5nVRIO+DmA/77zOuhkcQ8NiwlK3vkY06X8pUzJLfHQE="></script>
+    nonce="BAek+yGLoqARpiEICbSYiyjdoYP2MhkFpQPubCAOcts="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1228148/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1228148/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               50
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
