--- a/VRChat/05/1228005.html
+++ b/VRChat/05/1228005.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "VS5thfQflw8gO33uYkEIzEmHFvpemPTBrObP5D3b9Vs="></script>
+    "qQR/tY8Gq9drsjmBWiAfQyVxUSIaD4zmy7FjGDf2Idw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"漢の赤褌","description":"古来より日本に伝わる漢の正装「赤褌」\n二月十四日は褌の日でございます\n我こそは漢と意気込まれます方々に、\n是非ともこちらをお届けいたしたく思いまして、\n今回褌の日限定配布をさせていただきます。","url":"https://booth.pm/ja/items/1228005","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1228005/fbffe8eb-2725-4baa-9ff1-1e1667188960_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VS5thfQflw8gO33uYkEIzEmHFvpemPTBrObP5D3b9Vs="></script>
+    nonce="qQR/tY8Gq9drsjmBWiAfQyVxUSIaD4zmy7FjGDf2Idw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1228005/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1228005/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               40
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
