--- a/VRChat/41/1227241.html
+++ b/VRChat/41/1227241.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9V5Kiq0qv1bOvjTNS+e7KK5R6ewfYy1nLQomIqjTcMA="></script>
+    "ONR2bTtBBQNcm5VAcJWjwZBRyf3gZ0UMPw+qCT4ESp4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】ユキヤナギのヘアピン【フリー】","description":"VRChat向けアクセサリー『ユキヤナギのヘアピン』です。\n雪白くて小さな、ユキヤナギの花をイメージしてみました。\n\nユキヤナギの花言葉：愛嬌、気まま、自由、懸命\n\n▲2562、UnityTechnologies の GemShader を使用しています。\nGemShaderをインポートした上でご利用ください。\n（https://assetstore.unity.com/packages/vfx/shaders/gem-shader-3）\n\n\n\n■可能事項\n・本モデルの改変\n・商業利用\n\n■禁止事項\n・二次配布。また購入者本人以外が本モデルを使用できる状態にする行為。\n・特定個人や団体への中傷を目的とした利用\n\n■その他\n・本モデル、改造モデルの著作権は『空と夢之旅人』に帰属するものとします。\n・本モデル、改造モデルを使用することによって生じた何らかのトラブル、損失に対し『空と夢之旅人』は一切責任を負わないものとします。\n","url":"https://booth.pm/ja/items/1227241","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b04d9d75-7d81-42bf-a89b-86a90c580e65/i/1227241/7b208a7b-2215-467e-8cf9-7c40224670a9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9V5Kiq0qv1bOvjTNS+e7KK5R6ewfYy1nLQomIqjTcMA="></script>
+    nonce="ONR2bTtBBQNcm5VAcJWjwZBRyf3gZ0UMPw+qCT4ESp4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1227241/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              596
+                              595
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1227241/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              596
+                              595
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
